--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,3 +1,91 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
+  --hue-neutral: lightskyblue;
+  --hue-neutral-btn: lightgray;
+  --hue-wrong: lightcoral;
+  --hue-correct: lightgreen;
+}
+
 body {
-  background-color: lightblue;
+  font-size: 1rem;
+  --hue: var(--hue-neutral);
+  padding: 0;
+  margin: 0;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--hue);
+}
+
+body.correct {
+  --hue: var(--hue-correct);
+}
+
+body.wrong {
+  --hue: var(--hue-wrong);
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 0px 10px 2px;
+}
+
+.btn-grid {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px;
+}
+
+.btn {
+  --hue: var(--hue-neutral-btn);
+  border: 1px solid darkgray;
+  border-radius: 5px;
+  padding: 5px;
+  outline: none;
+  background-color: var(--hue);
+}
+
+.btn:hover {
+  border: 1px solid black;
+}
+
+.btn.correct {
+  --hue: var(--hue-correct);
+}
+.btn.wrong {
+  --hue: var(--hue-wrong);
+}
+
+.start-btn,
+.next-btn {
+  font-size: 2rem;
+  padding: 10px;
+  margin: 10px;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hide {
+  display: none;
+}
+
+#question {
+  font-size: 2rem;
 }
