--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -6,86 +6,50 @@
 
 :root {
   font-size: 62.5%;
-  --hue-neutral: lightskyblue;
-  --hue-neutral-btn: lightgray;
-  --hue-wrong: lightcoral;
-  --hue-correct: lightgreen;
 }
 
 body {
-  font-size: 1rem;
-  --hue: var(--hue-neutral);
-  padding: 0;
+  font-family: "Roboto Mono", monospace;
   margin: 0;
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--hue);
+  padding: 0;
 }
 
-body.correct {
-  --hue: var(--hue-correct);
+header {
+  background-color: darkcyan;
+  justify-content: space-between;
+}
+main {
+  background-color: lightblue;
+}
+footer {
+  height: 40px;
+  background-color: darkcyan;
+  color: white;
+  font-size: 2rem;
+  text-align: center;
 }
 
-body.wrong {
-  --hue: var(--hue-wrong);
+#leaderboard {
+  margin: 5px;
+  font-size: 2rem;
 }
 
-.container {
-  width: 800px;
-  max-width: 80%;
+#title {
+  text-align: center;
+  color: white;
+  font-size: 1.5rem;
+}
+
+#countdown {
   background-color: white;
-  border-radius: 10px;
-  padding: 10px;
-  box-shadow: 0px 0px 10px 2px;
-}
-
-.btn-grid {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 10px;
-  margin: 20px;
-}
-
-.btn {
-  --hue: var(--hue-neutral-btn);
-  border: 1px solid darkgray;
+  margin: 5px;
+  font-size: 2rem;
+  text-align: center;
   border-radius: 5px;
-  padding: 5px;
-  outline: none;
-  background-color: var(--hue);
 }
 
-.btn:hover {
-  border: 1px solid black;
-}
-
-.btn.correct {
-  --hue: var(--hue-correct);
-}
-.btn.wrong {
-  --hue: var(--hue-wrong);
-}
-
-.start-btn,
-.next-btn {
-  font-size: 2rem;
-  padding: 10px;
-  margin: 10px;
-}
-
-.controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hide {
-  display: none;
-}
-
-#question {
-  font-size: 2rem;
+#questionCard {
+  margin: 20px;
+  border-radius: 10px;
+  background-color: white;
 }
