--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -30,6 +30,7 @@ footer {
 }
 
 #leaderboard {
+  width: auto;
   margin: 5px;
   font-size: 2rem;
 }
@@ -41,6 +42,7 @@ footer {
 }
 
 #countdown {
+  width: auto;
   background-color: white;
   margin: 5px;
   font-size: 2rem;
@@ -52,4 +54,22 @@ footer {
   margin: 20px;
   border-radius: 10px;
   background-color: white;
+}
+
+#currentQuestion {
+  margin: 0;
+  padding: 10px;
+  font-size: 2rem;
+  width: auto;
+  background-color: darkgray;
+}
+
+.answer {
+  font-size: 1.5rem;
+  margin: 10px;
+  padding: 5px;
+}
+
+.answer:hover {
+  background-color: lightgray;
 }
