--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -42,7 +42,7 @@ footer {
   text-align: center;
 }
 
-#leaderboard {
+#leaderboardBtn {
   width: auto;
   margin: 5px;
   font-size: 2rem;
@@ -106,6 +106,10 @@ footer {
 #leaderboardTitle {
   font-size: 2rem;
   background-color: darkgray;
+}
+
+#leaderboardSpoiler {
+  font-size: 2rem;
 }
 
 .user {
