--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -2,17 +2,18 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: "Roboto Mono", monospace;
 }
 
 :root {
   font-size: 62.5%;
   --hue-neutral: white;
+  --hue-footer-neutral: darkcyan;
   --hue-wrong: lightcoral;
   --hue-correct: lightgreen;
 }
 
 body {
-  font-family: "Roboto Mono", monospace;
   margin: 0;
   padding: 0;
 }
@@ -31,6 +32,16 @@ body {
   font-size: 1.5rem;
 }
 
+#endTitle {
+  text-align: center;
+  font-size: 2rem;
+}
+
+#endText {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
 header {
   background-color: darkcyan;
   justify-content: space-between;
@@ -39,8 +50,9 @@ main {
   background-color: lightblue;
 }
 footer {
+  --hue: var(--hue-footer-neutral);
+  background-color: var(--hue);
   height: 40px;
-  background-color: darkcyan;
   color: white;
   font-size: 2rem;
   text-align: center;
@@ -49,6 +61,19 @@ footer {
 #leaderboardBtn {
   width: auto;
   margin: 5px;
+  font-size: 2rem;
+}
+
+#userInputWrap {
+  margin: 10px;
+}
+
+#inputSubmit {
+  text-align: center;
+  font-size: 2rem;
+}
+#startBtn {
+  text-align: center;
   font-size: 2rem;
 }
 
@@ -82,19 +107,13 @@ footer {
 }
 
 .answer {
-  --hue: var(var(--hue-neutral));
+  --hue: var(--hue-neutral);
   font-size: 1.5rem;
   margin: 10px;
   padding: 5px;
   background-color: var(--hue);
 }
 
-.answer.correct {
-  --hue: var(--hue-correct);
-}
-.answer.wrong {
-  --hue: var(--hue-wrong);
-}
 .answer:hover {
   background-color: lightgray;
 }
