--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -75,6 +75,7 @@ footer {
 }
 
 #inputSubmit {
+  width: auto;
   text-align: center;
   font-size: 2rem;
 }
@@ -90,7 +91,7 @@ footer {
 }
 
 #countdown {
-  width: 250px;
+  width: auto;
   background-color: white;
   margin: 5px;
   font-size: 2rem;
@@ -135,9 +136,13 @@ footer {
 #leaderboardTitle {
   font-size: 2rem;
   background-color: darkgray;
+  text-align: center;
 }
 
 #leaderboardSpoiler {
+  font-size: 2rem;
+}
+#leaderboardClear {
   font-size: 2rem;
 }
 
@@ -145,4 +150,13 @@ footer {
   font-size: 1.5rem;
   margin: 10px;
   padding: 5px;
+}
+
+#instructions {
+  font-size: 2rem;
+  text-align: start;
+}
+
+ul {
+  text-align: start;
 }
